--- a/app/src/main/res/layout/activity_repeat_words.xml
+++ b/app/src/main/res/layout/activity_repeat_words.xml
@@ -5,15 +5,9 @@
     android:layout_height="match_parent"
     tools:context="com.belashdima.rememberwords.activities.RepeatWordsActivity">
 
-    <RelativeLayout
-        android:id="@+id/repeat_words_main_layout"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/repeat_words_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".activities.StartActivity"
-        android:background="@color/colorBack">
-    </RelativeLayout>
+        android:layout_height="match_parent" />
+
 </RelativeLayout>
