--- a/app/src/main/res/layout/words_list_recyclerview_item.xml
+++ b/app/src/main/res/layout/words_list_recyclerview_item.xml
@@ -8,23 +8,38 @@
     card_view:cardCornerRadius="2dp"
     card_view:cardElevation="2dp"
     android:background="@color/colorCard"
+    card_view:cardBackgroundColor="@color/colorCard"
     card_view:contentPadding="6dp">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        
-        <TextView
-            android:id="@+id/mainInscription_text_view"
+
+        <ImageView
+            android:id="@+id/folderImage_image_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_folder_open_black_48dp"
+            android:paddingRight="6dp"
+            android:visibility="gone"/>
+
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="24sp"/>
+            android:layout_toRightOf="@id/folderImage_image_view">
 
-        <TextView
-            android:id="@+id/auxiliaryInscription_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/mainInscription_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"/>
+
+            <TextView
+                android:id="@+id/auxiliaryInscription_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
